deploy/opengauss-repo-verify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-repo-verify
  name: opengauss-repo-verify
