deploy/opengauss-repo-verify/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: post-verification-service
  namespace: opengauss-repo-verify
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: post-verification
  type: ClusterIP
